<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.kidzlearning.e_kids.MainActivity"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <ImageButton
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="50dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/learn"
        android:onClick="learnMod"
        android:background="@drawable/learn_icon"/>

        <TextView
            android:gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/learn"
            android:onClick="learnMod"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageButton
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="50dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/identify"
        android:onClick="identifyMod"
        android:background="@drawable/identify_icon"/>

        <TextView
            android:gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:textSize="30dp"
            android:onClick="identifyMod"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/identify"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageButton
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="50dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/play"
        android:onClick="playMod"
        android:background="@drawable/click"/>

        <TextView
            android:gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:textSize="30dp"
            android:onClick="playMod"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/play"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </LinearLayout>





</LinearLayout>
</ScrollView>